# Book-API

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker_tutorial.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: __init__.py  config.py  database.py  lifespan.py
app/models/: book.py
app/routers/: books.py
app/schemas/: __init__.py  book.py
app/services/: book.py
tests/: test_books.py
